# botbot

zedbot_demo/zedbot_bringup/: CMakeLists.txt  README.md  package.xml
zedbot_demo/zedbot_bringup/launch/: rviz.launch  start_zedbot.launch  start_zedbot_simulation.launch
zedbot_demo/zedbot_bringup/launch/include/: zed.launch  zed2.launch  zed_camera.launch  zedbot_core.launch  zedm.launch
zedbot_demo/zedbot_bringup/rviz/: zedbot_start_config.rviz
zedbot_demo/zedbot_bringup/src/: zed_orientation_publisher.cpp
zedbot_demo/zedbot_description/: CMakeLists.txt  README.md  package.xml
zedbot_demo/zedbot_description/urdf/: zed_descr.urdf.xacro  zedbot_burger.gazebo.xacro  zedbot_burger.urdf.xacro
zedbot_demo/zedbot_description/urdf/simulation/: turtlebot3_burger_with_zed.urdf.xacro
zedbot_demo/zedbot_global_costmap/: CMakeLists.txt  README.md  package.xml
zedbot_demo/zedbot_global_costmap/launch/: main.launch  rviz.launch
zedbot_demo/zedbot_global_costmap/launch/include/: zedbot_rtabmap.launch
zedbot_demo/zedbot_global_costmap/params/rtabmap_params/: rtabmap_embeded_cam.yaml
zedbot_demo/zedbot_global_costmap/rviz/: zed-rtabmap.rviz  zedbot_global_costmap.rviz
zedbot_demo/zedbot_navigation/: CMakeLists.txt  README.md  package.xml
zedbot_demo/zedbot_navigation/launch/: main.launch  rviz.launch
zedbot_demo/zedbot_navigation/launch/include/: move_base.launch.xml  zedbot_navigation.launch  zedbot_rtabmap.launch
zedbot_demo/zedbot_navigation/params/move_base_params/: costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  global_planner_params_burger.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params_burger.yaml
zedbot_demo/zedbot_navigation/rviz/: zedbot_navigation_config.rviz
zedbot_demo/zedbot_navigation/worlds/: turtlebot3_world.world
zedbot_demo/zedbot_people_tracking/: CMakeLists.txt  README.md  package.xml
zedbot_demo/zedbot_people_tracking/launch/: main.launch  rviz.launch
zedbot_demo/zedbot_people_tracking/launch/include/: move_base.launch.xml  people_tracking.launch  zedbot_navigation.launch
zedbot_demo/zedbot_people_tracking/maps/: free_occupancy_grid.pgm  free_occupancy_grid.yaml
zedbot_demo/zedbot_people_tracking/params/move_base_params/: base_local_planner_params.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  global_planner_params_burger.yaml  local_costmap_params.yaml  teb_local_planner_params_burger.yaml
zedbot_demo/zedbot_people_tracking/rviz/: zedbot_people_tracking_config.rviz
zedbot_demo/zedbot_people_tracking/src/: people_tracking.cpp
